--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tech-radar",
   "description": "A React Component for Tech Radar inspired by ThoughtWorks' technology decision sharing project",
   "version": "0.1.28",
-  //"author": "Omer Gurarslan <omerg@lucidcode.com.tr> (https://omerg.info)",
+  "author": "Omer Gurarslan <omerg@lucidcode.com.tr> (https://omerg.info)",
   "repository": {
     "type": "git",
     "url": "https://github.com/SurendraTest9/techradar.git"
