--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "/node_modules/(?!(d3|d3-scale|d3-array|d3-format|d3-interpolate|d3-time|d3-color|internmap|delaunator|robust-predicates)/)"
+      "node_modules/(?!(d3-scale)/)"
     ]
   },
   "keywords": [
